samples/_failures_safe/1761645196_1060a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6db45eb.c:163:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  163 | int main
      | ^~~
